[package]
name = "lib_ipfs_hls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.15.0"
ipfs-api-backend-hyper = "0.4"
tokio = {version = "1.18.2", features = ["full"]}
json = "0.12.4"
futures-util = "0.3.21"